RAF_Compiler/gen/RAFParser.py
# Generated from E:/7-Semester/Compiler/Robust-Ai-Framework/RAF_Compiler/grammar/RAF.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RAFParser ( Parser ):

    grammarFileName = "RAF.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MNIST'", "'CIFAR'", "'use_json'", "'use_default'", 
                     "'Load'", "'Save'", "'MLP'", "'Layer_Size={'", "',('", 
                     "','", "')'", "'}'", "'\"relu\"'", "'\"sigmoid\"'", 
                     "'\"softmax\"'", "'plot'", "'val_acc'", "'confusion_matrix'", 
                     "'accuracy'", "'backdoor_stat'", "'flip_poison'", "'->'", 
                     "'backdoor'", "':='", "'{'", "'src_class'", "':'", 
                     "'target_class'", "'('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "INTEGER", "String" ]

    RULE_start = 0
    RULE_data_statement = 1
    RULE_data = 2
    RULE_dataset = 3
    RULE_json = 4
    RULE_action = 5
    RULE_model_statement = 6
    RULE_mlp = 7
    RULE_size = 8
    RULE_activation = 9
    RULE_plot_statement = 10
    RULE_metric = 11
    RULE_poison_statement = 12
    RULE_label_flip = 13
    RULE_flip_statement = 14
    RULE_backdoor = 15
    RULE_pattern = 16
    RULE_label = 17
    RULE_src = 18
    RULE_target = 19
    RULE_x = 20
    RULE_y = 21
    RULE_a = 22
    RULE_b = 23

    ruleNames =  [ "start", "data_statement", "data", "dataset", "json", 
                   "action", "model_statement", "mlp", "size", "activation", 
                   "plot_statement", "metric", "poison_statement", "label_flip", 
                   "flip_statement", "backdoor", "pattern", "label", "src", 
                   "target", "x", "y", "a", "b" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    WS=30
    INTEGER=31
    String=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_statement(self):
            return self.getTypedRuleContext(RAFParser.Data_statementContext,0)


        def model_statement(self):
            return self.getTypedRuleContext(RAFParser.Model_statementContext,0)


        def plot_statement(self):
            return self.getTypedRuleContext(RAFParser.Plot_statementContext,0)


        def getRuleIndex(self):
            return RAFParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = RAFParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.data_statement()
            self.state = 49
            self.model_statement()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 50
                self.plot_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def json(self):
            return self.getTypedRuleContext(RAFParser.JsonContext,0)


        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RAFParser.DataContext)
            else:
                return self.getTypedRuleContext(RAFParser.DataContext,i)


        def poison_statement(self):
            return self.getTypedRuleContext(RAFParser.Poison_statementContext,0)


        def getRuleIndex(self):
            return RAFParser.RULE_data_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_statement" ):
                listener.enterData_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_statement" ):
                listener.exitData_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_statement" ):
                return visitor.visitData_statement(self)
            else:
                return visitor.visitChildren(self)




    def data_statement(self):

        localctx = RAFParser.Data_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_data_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.data()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5 or _la==6):
                    break

            self.state = 58
            self.json()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21 or _la==23:
                self.state = 59
                self.poison_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self):
            return self.getTypedRuleContext(RAFParser.ActionContext,0)


        def dataset(self):
            return self.getTypedRuleContext(RAFParser.DatasetContext,0)


        def getRuleIndex(self):
            return RAFParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData" ):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = RAFParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.action()
            self.state = 63
            self.dataset()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatasetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RAFParser.RULE_dataset

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataset" ):
                listener.enterDataset(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataset" ):
                listener.exitDataset(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataset" ):
                return visitor.visitDataset(self)
            else:
                return visitor.visitChildren(self)




    def dataset(self):

        localctx = RAFParser.DatasetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dataset)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JsonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RAFParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson" ):
                return visitor.visitJson(self)
            else:
                return visitor.visitChildren(self)




    def json(self):

        localctx = RAFParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_json)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RAFParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = RAFParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Model_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mlp(self):
            return self.getTypedRuleContext(RAFParser.MlpContext,0)


        def getRuleIndex(self):
            return RAFParser.RULE_model_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel_statement" ):
                listener.enterModel_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel_statement" ):
                listener.exitModel_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel_statement" ):
                return visitor.visitModel_statement(self)
            else:
                return visitor.visitChildren(self)




    def model_statement(self):

        localctx = RAFParser.Model_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_model_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.mlp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def size(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RAFParser.SizeContext)
            else:
                return self.getTypedRuleContext(RAFParser.SizeContext,i)


        def activation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RAFParser.ActivationContext)
            else:
                return self.getTypedRuleContext(RAFParser.ActivationContext,i)


        def getRuleIndex(self):
            return RAFParser.RULE_mlp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlp" ):
                listener.enterMlp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlp" ):
                listener.exitMlp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlp" ):
                return visitor.visitMlp(self)
            else:
                return visitor.visitChildren(self)




    def mlp(self):

        localctx = RAFParser.MlpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mlp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(RAFParser.T__6)
            self.state = 74
            self.match(RAFParser.T__7)
            self.state = 75
            self.size()
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.match(RAFParser.T__8)
                self.state = 77
                self.size()
                self.state = 78
                self.match(RAFParser.T__9)
                self.state = 79
                self.activation()
                self.state = 80
                self.match(RAFParser.T__10)
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9):
                    break

            self.state = 86
            self.match(RAFParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(RAFParser.INTEGER, 0)

        def getRuleIndex(self):
            return RAFParser.RULE_size

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSize" ):
                listener.enterSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSize" ):
                listener.exitSize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSize" ):
                return visitor.visitSize(self)
            else:
                return visitor.visitChildren(self)




    def size(self):

        localctx = RAFParser.SizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_size)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(RAFParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActivationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RAFParser.RULE_activation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActivation" ):
                listener.enterActivation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActivation" ):
                listener.exitActivation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActivation" ):
                return visitor.visitActivation(self)
            else:
                return visitor.visitChildren(self)




    def activation(self):

        localctx = RAFParser.ActivationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_activation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Plot_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metric(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RAFParser.MetricContext)
            else:
                return self.getTypedRuleContext(RAFParser.MetricContext,i)


        def getRuleIndex(self):
            return RAFParser.RULE_plot_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlot_statement" ):
                listener.enterPlot_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlot_statement" ):
                listener.exitPlot_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlot_statement" ):
                return visitor.visitPlot_statement(self)
            else:
                return visitor.visitChildren(self)




    def plot_statement(self):

        localctx = RAFParser.Plot_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_plot_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(RAFParser.T__15)
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.metric()
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetricContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RAFParser.RULE_metric

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetric" ):
                listener.enterMetric(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetric" ):
                listener.exitMetric(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetric" ):
                return visitor.visitMetric(self)
            else:
                return visitor.visitChildren(self)




    def metric(self):

        localctx = RAFParser.MetricContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_metric)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1966080) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Poison_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.datatype = str()


        def getRuleIndex(self):
            return RAFParser.RULE_poison_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.datatype = ctx.datatype



    class Label_functionContext(Poison_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RAFParser.Poison_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def label_flip(self):
            return self.getTypedRuleContext(RAFParser.Label_flipContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel_function" ):
                listener.enterLabel_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel_function" ):
                listener.exitLabel_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel_function" ):
                return visitor.visitLabel_function(self)
            else:
                return visitor.visitChildren(self)


    class Backdoor_functionContext(Poison_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RAFParser.Poison_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def backdoor(self):
            return self.getTypedRuleContext(RAFParser.BackdoorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackdoor_function" ):
                listener.enterBackdoor_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackdoor_function" ):
                listener.exitBackdoor_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBackdoor_function" ):
                return visitor.visitBackdoor_function(self)
            else:
                return visitor.visitChildren(self)



    def poison_statement(self):

        localctx = RAFParser.Poison_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_poison_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                localctx = RAFParser.Label_functionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.label_flip()
                pass
            elif token in [23]:
                localctx = RAFParser.Backdoor_functionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.backdoor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Label_flipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flip_statement(self):
            return self.getTypedRuleContext(RAFParser.Flip_statementContext,0)


        def getRuleIndex(self):
            return RAFParser.RULE_label_flip

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel_flip" ):
                listener.enterLabel_flip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel_flip" ):
                listener.exitLabel_flip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel_flip" ):
                return visitor.visitLabel_flip(self)
            else:
                return visitor.visitChildren(self)




    def label_flip(self):

        localctx = RAFParser.Label_flipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_label_flip)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(RAFParser.T__20)
            self.state = 105
            self.flip_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Flip_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RAFParser.LabelContext)
            else:
                return self.getTypedRuleContext(RAFParser.LabelContext,i)


        def getRuleIndex(self):
            return RAFParser.RULE_flip_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFlip_statement" ):
                listener.enterFlip_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFlip_statement" ):
                listener.exitFlip_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFlip_statement" ):
                return visitor.visitFlip_statement(self)
            else:
                return visitor.visitChildren(self)




    def flip_statement(self):

        localctx = RAFParser.Flip_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_flip_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 107
                self.label()
                self.state = 108
                self.match(RAFParser.T__21)
                self.state = 109
                self.label()

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 110
                    self.match(RAFParser.T__9)


                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackdoorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def src(self):
            return self.getTypedRuleContext(RAFParser.SrcContext,0)


        def target(self):
            return self.getTypedRuleContext(RAFParser.TargetContext,0)


        def pattern(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RAFParser.PatternContext)
            else:
                return self.getTypedRuleContext(RAFParser.PatternContext,i)


        def getRuleIndex(self):
            return RAFParser.RULE_backdoor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackdoor" ):
                listener.enterBackdoor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackdoor" ):
                listener.exitBackdoor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBackdoor" ):
                return visitor.visitBackdoor(self)
            else:
                return visitor.visitChildren(self)




    def backdoor(self):

        localctx = RAFParser.BackdoorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_backdoor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(RAFParser.T__22)
            self.state = 118
            self.match(RAFParser.T__23)
            self.state = 119
            self.match(RAFParser.T__24)
            self.state = 120
            self.match(RAFParser.T__25)
            self.state = 121
            self.match(RAFParser.T__26)
            self.state = 122
            self.src()
            self.state = 123
            self.match(RAFParser.T__9)
            self.state = 124
            self.match(RAFParser.T__27)
            self.state = 125
            self.match(RAFParser.T__26)
            self.state = 126
            self.target()
            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.pattern()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

            self.state = 132
            self.match(RAFParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def x(self):
            return self.getTypedRuleContext(RAFParser.XContext,0)


        def y(self):
            return self.getTypedRuleContext(RAFParser.YContext,0)


        def a(self):
            return self.getTypedRuleContext(RAFParser.AContext,0)


        def b(self):
            return self.getTypedRuleContext(RAFParser.BContext,0)


        def getRuleIndex(self):
            return RAFParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPattern" ):
                return visitor.visitPattern(self)
            else:
                return visitor.visitChildren(self)




    def pattern(self):

        localctx = RAFParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_pattern)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(RAFParser.T__9)
            self.state = 135
            self.match(RAFParser.T__28)
            self.state = 136
            self.x()
            self.state = 137
            self.match(RAFParser.T__9)
            self.state = 138
            self.y()
            self.state = 139
            self.match(RAFParser.T__9)
            self.state = 140
            self.a()
            self.state = 141
            self.match(RAFParser.T__9)
            self.state = 142
            self.b()
            self.state = 143
            self.match(RAFParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def String(self):
            return self.getToken(RAFParser.String, 0)

        def getRuleIndex(self):
            return RAFParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):
